K3S/tools/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: Always
          name: prowlarr
          ports:
            - containerPort: 9696
          volumeMounts:
            - name: prowlarr-volume
              mountPath: /config
              subPath: prowlarr
      volumes:
        - name: prowlarr-volume
          persistentVolumeClaim:
            claimName: prowlarr-pvc
