K3S/tools/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - port: 9696
