K3S/tools/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-http
  namespace: prowlarr
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: prowlarr.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-svc
                port:
                  number: 9696
    - host: prowlarr.k3s.wiserisk.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-svc
                port:
                  number: 9696
